--- a/signup.css
+++ b/signup.css
@@ -1,7 +1,7 @@
 body {
     background-image: url(IMAGES/pexels-mikebirdy-120049.jpg);
     background-size: cover;
-    font-family: Arial, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
@@ -10,7 +10,7 @@ body {
     height: 100vh;
   }
   
-  header {
+  /* header {
     background-color: rgb(199, 225, 251);
     color: rgb(0, 0, 0);
     padding: 20px;
@@ -21,7 +21,7 @@ body {
     font-size: 36px;
     margin: 0;
   }
-  
+   */
   main {
     display: flex;
     flex-wrap: wrap;
@@ -31,7 +31,7 @@ body {
   }
   
   form {
-    color: rgb(0, 85, 122);
+    color: rgb(255, 255, 255);
     flex: 1 1 100%;
     margin: 0 20px;
   }
@@ -54,10 +54,10 @@ body {
   }
   
   button[type="submit"] {
-    background-color: #4CAF50;
+    background-color: rgb(199, 225, 251);
     border: none;
     border-radius: 4px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 24px;
     padding: 10px;
     margin-top: 20px;
@@ -65,7 +65,7 @@ body {
   }
   
   button[type="submit"]:hover {
-    background-color: #3e8e41;
+    background-color: rgb(25, 76, 128);
   }
   
   footer {
